src/styles/button.css
.btn {
  border: 0;
  cursor: pointer;
  font-size: 1.2rem;
  padding: .5rem 2rem;
  border-radius: 5px;
}

.btn--primary {
  color: white;
  background-color: #088af2;
}

.btn--transparent {
  font-size: inherit;
  padding: 0;
  border-radius: 0;
  background-color: transparent;
}

